--- a/recipeApp/styles.css
+++ b/recipeApp/styles.css
@@ -1,38 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin: 0;
-  background: #7f7fd5; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #91eae4,
-    #86a8e7,
-    #7f7fd5
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #91eae4,
-    #86a8e7,
-    #7f7fd5
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+    background: #ece9e6;
+    background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+    background: linear-gradient(to right, #ffffff, #ece9e6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    min-height: 100vh;
 }
-.mobile-container {
-  width: 400px;
-  overflow: hidden;
-  background-color: white;
-  box-shadow: 0 0 10px 2px #3333331A;
-  border-radius: 3px;
-}
+
 img {
-  max-width: 100%;
+    max-width: 100%;
 }
+
+.mobile-container {
+    background-color: #fff;
+    box-shadow: 0 0 10px 2px #3333331a;
+    border-radius: 3px;
+    overflow: hidden;
+    width: 400px;
+}
+
 header {
     display: flex;
     align-items: center;
@@ -40,29 +35,29 @@ header {
     padding: 1rem;
 }
 
-header input{
+header input {
     background-color: #eee;
-    border-radius: 3px;
     border: none;
-    padding: 0.5rem 1rem;
+    border-radius: 3px;
     font-family: inherit;
+    padding: 0.5rem 1rem;
 }
 
 header button {
     background-color: transparent;
-    color :darkslateblue;
+    border: none;
+    color: rgb(138, 129, 141);
     font-size: 1.5rem;
     margin-left: 10px;
 }
 
 .fav-container {
+    background-color: rgb(243, 225, 255);
     padding: 0.25rem 1rem;
     text-align: center;
-    background-color:rgb(168, 198, 240);
-
 }
 
-.fav-meals{
+.fav-meals {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -71,26 +66,27 @@ header button {
 }
 
 .fav-meals li {
-    width: 75px;
+    cursor: pointer;
     position: relative;
     margin: 5px;
-    /* cursor: pointer; */
+    width: 75px;
 }
-
 
 .fav-meals li .clear {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    position: absolute;
-    top : -0.5rem;
-    left:  -0.5rem;
     opacity: 0;
+    position: absolute;
+    top: -0.5rem;
+    right: -0.5rem;
     font-size: 1.2rem;
 }
-.fav-meals li:hover .clear{
+
+.fav-meals li:hover .clear {
     opacity: 1;
 }
+
 .fav-meals li img {
     border: 2px solid #ffffff;
     border-radius: 50%;
@@ -107,7 +103,6 @@ header button {
     overflow: hidden;
     text-overflow: ellipsis;
     width: 75px;
-
 }
 
 .meal {
@@ -118,43 +113,86 @@ header button {
     overflow: hidden;
 }
 
-.meal-header{
+.meal-header {
     position: relative;
-
 }
-.meal-header .random{
+
+.meal-header .random {
     position: absolute;
-    top: 15px;
-    background-color: white;
-    padding: 0.25rem 0.5rem;
+    top: 1rem;
+    background-color: #fff;
+    padding: 0.25rem 1rem;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
-.meal-header img{
-    height: 180px;
-    width: 100%;
+
+.meal-header img {
     object-fit: cover;
+    height: 250px;
+    width: 100%;
 }
+
 .meal-body {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-
 }
 
-.meal-body h4{
+.meal-body h4 {
     margin: 0;
 }
-.meal-body button {
+
+.meal-body .fav-btn {
     border: none;
     background-color: transparent;
-    font-size: 1rem;
+    color: rgb(197, 188, 188);
     cursor: pointer;
-    color: gray;
+    font-size: 1.2rem;
 }
 
 .meal-body .fav-btn.active {
-    color: red;
+    color: rebeccapurple;
+}
 
+.popup-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.popup-container.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.popup {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 0 2rem;
+    position: relative;
+    overflow: auto;
+    max-height: 100vh;
+    max-width: 600px;
+    width: 100%;
+}
+
+.popup .close-popup {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.meal-info h1 {
+    text-align: center;
 }
